--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
-        button {
-            background-color: silver;
+        p {
             font-size: large;
             font-weight: bold;
-            color: rgb(0, 0, 0);
+            color: black;
         }
 
-        hr {
-            height: 4px;
-            background-color: black;
+        a {
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
@@ -73,14 +72,8 @@
             </ol>
         </fieldset>
     </form>
-    <form action="posulannia.html" target="_blank">
-        <button type="button">Next</button>
-        <hr>
-        <footer>
-            <div class="block">НЕ ЗАБУДЬ МАНДАРИНИ</div>
-        </footer>
-        <hr>
-    </form>
+    <p><a href="posulannia.html">Next</a></p>
+
 </body>
 
 </html>
